# dmake

./: .clang-format  .gitmodules  CMakeLists.txt  Makefile  README.md  dependencies.cpp  dependencies.hpp  error.hpp  input.cpp  input.hpp  main.cpp  variables.cpp  variables.hpp
types/: include.hpp  makefile.hpp  rule.hpp  variable.hpp
